--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -58,9 +58,10 @@
         <div
           class="character-box-good hover-info-good"
           onclick="showPopup(this)"
-          data-description="A gifted caster from the mystic isles, bound by oath to defend the galaxy's light."
+          data-name="MAYA (Magicborn/Mage)"
+          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
           data-image="images/characterlogo-07.png"
-          data
+          data-weaponimg="images/weapon-09.png"
         >
           <div class="character-box">
             <img src="images/characterframe-07.png" class="character-bg" />
@@ -75,7 +76,15 @@
           </div>
         </div>
 
-        <div class="character-box-good hover-info-good">
+        <div
+          class="character-box-good hover-info-good"
+          onclick="showPopup(this)"
+          data-name="REN EVANS (Human/Lightweight)"
+          data-side="good"
+          data-description="The legend, once the loyal guard to the Galactic Emperor, now walks a path of vengeance. After the emperor's death at the hands of Asphegor, Ren swore to defend the realm. Armed with unwavering honor and steel, he seeks justice, guarding the galaxy from falling into chaos and ruin."
+          data-image="images/characterlogo-08.png"
+          data-weaponimg="images/weapon-07.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-08.png" class="character-bg" />
             <img
@@ -89,7 +98,14 @@
           </div>
         </div>
 
-        <div class="character-box-good hover-info-good">
+        <div
+          class="character-box-good hover-info-good"
+          onclick="showPopup(this)"
+          data-name="HORCUS (Demi-god/Heavyweight)"
+          data-description="King of a storm-wracked kingdom, commands the power of lightning through his sacred trident. Feared and respected, he rules with thunderous might and unwavering authority. Born from chaos, he channels the storm’s fury to protect his people and strike down foes who dare challenge his throne or destiny."
+          data-image="images/characterlogo-09.png"
+          data-weaponimg="images/weapon-12.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-09.png" class="character-bg" />
             <img
@@ -105,7 +121,14 @@
       </div>
 
       <div class="character-row">
-        <div class="character-box-good hover-info-good">
+        <div
+          class="character-box-good hover-info-good"
+          onclick="showPopup(this)"
+          data-name="HUDA (Fairy/Marksman)"
+          data-description="Firstborn son of the Fairy King, is hailed as the greatest archer the world has ever known. With eyes sharper than any blade and arrows guided by magic, he defends his realm with unmatched precision. Graceful yet deadly, Huda embodies the legacy and pride of the fairy bloodline."
+          data-image="images/characterlogo-10.png"
+          data-weaponimg="images/weapon-10.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-10.png" class="character-bg" />
             <img
@@ -119,7 +142,14 @@
           </div>
         </div>
 
-        <div class="character-box-good hover-info-good">
+        <div
+          class="character-box-good hover-info-good"
+          onclick="showPopup(this)"
+          data-name="EMMA (Human/Heavyweight)"
+          data-description="A brave human fighter, once traveled the world aiding those in need. Fierce and compassionate, she stood for justice wherever she went. After meeting Huda and witnessing his unwavering spirit, she found a new purpose and has followed him ever since, standing by his side in every battle."
+          data-image="images/characterlogo-11.png"
+          data-weaponimg="images/weapon-11.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-11.png" class="character-bg" />
             <img
@@ -133,7 +163,14 @@
           </div>
         </div>
 
-        <div class="character-box-good hover-info-good">
+        <div
+          class="character-box-good hover-info-good"
+          onclick="showPopup(this)"
+          data-name="KADI (Angel/Protector)"
+          data-description="A celestial protector angel, guards the realm with grace and power. Once in love with Lucas, now her enemy—she battles inner sorrow while facing him across the battlefield. Her wings shine with light, but her heart carries shadows. Still, she fights to shield the innocent from darkness and betrayal."
+          data-image="images/characterlogo-12.png"
+          data-weaponimg="images/weapon-08.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-12.png" class="character-bg" />
             <img
@@ -167,7 +204,15 @@
     <!-- Character Grid Bad -->
     <div class="character-grid-bad">
       <div class="character-row">
-        <div class="character-box-bad hover-info-bad">
+        <div
+          class="character-box-bad hover-info-bad"
+          onclick="showPopup(this)"
+          data-name="KANE-NOBI (Human/Lightweight)"
+          data-side="bad"
+          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-image="images/characterlogo-01.png"
+          data-weaponimg="images/weapon-01.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-01.png" class="character-bg" />
             <img src="images/characterlogo-01.png" class="character-logo-bad" />
@@ -178,7 +223,15 @@
           </div>
         </div>
 
-        <div class="character-box-bad hover-info-bad">
+        <div
+          class="character-box-bad hover-info-bad"
+          onclick="showPopup(this)"
+          data-name="ASPHEGOR (Demi-god/Heavyweight)"
+          data-side="bad"
+          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-image="images/characterlogo-02.png"
+          data-weaponimg="images/weapon-02.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-02.png" class="character-bg" />
             <img src="images/characterlogo-02.png" class="character-logo-bad" />
@@ -189,7 +242,15 @@
           </div>
         </div>
 
-        <div class="character-box-bad hover-info-bad">
+        <div
+          class="character-box-bad hover-info-bad"
+          onclick="showPopup(this)"
+          data-name="MAVIE (Magicborn/Mage)"
+          data-side="bad"
+          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-image="images/characterlogo-03.png"
+          data-weaponimg="images/weapon-03.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-03.png" class="character-bg" />
             <img src="images/characterlogo-03.png" class="character-logo-bad" />
@@ -202,7 +263,15 @@
       </div>
 
       <div class="character-row">
-        <div class="character-box-bad hover-info-bad">
+        <div
+          class="character-box-bad hover-info-bad"
+          onclick="showPopup(this)"
+          data-name="LUCAS (Angel/Lightweight)"
+          data-side="bad"
+          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-image="images/characterlogo-04.png"
+          data-weaponimg="images/weapon-06.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-04.png" class="character-bg" />
             <img src="images/characterlogo-04.png" class="character-logo-bad" />
@@ -213,7 +282,15 @@
           </div>
         </div>
 
-        <div class="character-box-bad hover-info-bad">
+        <div
+          class="character-box-bad hover-info-bad"
+          onclick="showPopup(this)"
+          data-name="MARTIN (Human/Protector)"
+          data-side="bad"
+          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-image="images/characterlogo-05.png"
+          data-weaponimg="images/weapon-04.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-05.png" class="character-bg" />
             <img src="images/characterlogo-05.png" class="character-logo-bad" />
@@ -224,7 +301,15 @@
           </div>
         </div>
 
-        <div class="character-box-bad hover-info-bad">
+        <div
+          class="character-box-bad hover-info-bad"
+          onclick="showPopup(this)"
+          data-name="ANDY (Elf/Marksman)"
+          data-side="bad"
+          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-image="images/characterlogo-06.png"
+          data-weaponimg="images/weapon-05.png"
+        >
           <div class="character-box">
             <img src="images/characterframe-06.png" class="character-bg" />
             <img src="images/characterlogo-06.png" class="character-logo-bad" />
@@ -236,21 +321,19 @@
         </div>
       </div>
     </div>
-    <!-- Popup Modal -->
-    <div id="character-popup" class="character-popup hidden">
+    <!-- Popup window -->
+    <div id="popup" class="popup hidden">
       <div class="popup-content">
-        <img id="popup-image" src="" alt="Character" />
-        <div class="popup-info">
-          <p id="popup-description"></p>
-          <img
-            id="popup-weapon-img"
-            src=""
-            alt="Weapon"
-            style="max-width: 100px; margin-top: 10px"
-          />
+        <div class="left">
+          <img id="popup-image" src="" alt="Character Image" />
         </div>
-        <button onclick="closePopup()">Close</button>
+        <div class="right">
+          <h1 id="popup-title">Name</h1>
+          <img id="popup-weapon-img" src="" alt="Weapon Image" />
+          <div id="popup-description" class="text">Description</div>
+        </div>
       </div>
+      <button class="close-button" onclick="closePopup()">X</button>
     </div>
   </body>
 </html>
