--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -59,6 +59,7 @@
           class="character-box-good hover-info-good"
           onclick="showPopup(this)"
           data-name="MAYA (Magicborn/Mage)"
+          data-side="good"
           data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
           data-image="images/characterlogo-07.png"
           data-weaponimg="images/weapon-09.png"
@@ -102,6 +103,7 @@
           class="character-box-good hover-info-good"
           onclick="showPopup(this)"
           data-name="HORCUS (Demi-god/Heavyweight)"
+          data-side="good"
           data-description="King of a storm-wracked kingdom, commands the power of lightning through his sacred trident. Feared and respected, he rules with thunderous might and unwavering authority. Born from chaos, he channels the storm’s fury to protect his people and strike down foes who dare challenge his throne or destiny."
           data-image="images/characterlogo-09.png"
           data-weaponimg="images/weapon-12.png"
@@ -125,6 +127,7 @@
           class="character-box-good hover-info-good"
           onclick="showPopup(this)"
           data-name="HUDA (Fairy/Marksman)"
+          data-side="good"
           data-description="Firstborn son of the Fairy King, is hailed as the greatest archer the world has ever known. With eyes sharper than any blade and arrows guided by magic, he defends his realm with unmatched precision. Graceful yet deadly, Huda embodies the legacy and pride of the fairy bloodline."
           data-image="images/characterlogo-10.png"
           data-weaponimg="images/weapon-10.png"
@@ -146,6 +149,7 @@
           class="character-box-good hover-info-good"
           onclick="showPopup(this)"
           data-name="EMMA (Human/Heavyweight)"
+          data-side="good"
           data-description="A brave human fighter, once traveled the world aiding those in need. Fierce and compassionate, she stood for justice wherever she went. After meeting Huda and witnessing his unwavering spirit, she found a new purpose and has followed him ever since, standing by his side in every battle."
           data-image="images/characterlogo-11.png"
           data-weaponimg="images/weapon-11.png"
@@ -167,6 +171,7 @@
           class="character-box-good hover-info-good"
           onclick="showPopup(this)"
           data-name="KADI (Angel/Protector)"
+          data-side="good"
           data-description="A celestial protector angel, guards the realm with grace and power. Once in love with Lucas, now her enemy—she battles inner sorrow while facing him across the battlefield. Her wings shine with light, but her heart carries shadows. Still, she fights to shield the innocent from darkness and betrayal."
           data-image="images/characterlogo-12.png"
           data-weaponimg="images/weapon-08.png"
@@ -209,7 +214,7 @@
           onclick="showPopup(this)"
           data-name="KANE-NOBI (Human/Lightweight)"
           data-side="bad"
-          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-description=" A former prodigy of the Galactic Empire, now stands as one of its most dangerous renegades. Betrayed by his master, he turned to darkness, embracing vengeance and power. Driven by wrath, Kane-nobi serves no cause but his own, destroying anything and anyone that stands between him and his reveng"
           data-image="images/characterlogo-01.png"
           data-weaponimg="images/weapon-01.png"
         >
@@ -228,7 +233,7 @@
           onclick="showPopup(this)"
           data-name="ASPHEGOR (Demi-god/Heavyweight)"
           data-side="bad"
-          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-description="Known as the King’s Slayer, is the last of a forgotten warrior race. Feared and revered across the galaxy, he bears a haunted past and unmatched skill. His dark weapon echoes with ancient power, and his name alone silences empires. Asphegor kills not for glory, but for vengeance."
           data-image="images/characterlogo-02.png"
           data-weaponimg="images/weapon-02.png"
         >
@@ -247,7 +252,7 @@
           onclick="showPopup(this)"
           data-name="MAVIE (Magicborn/Mage)"
           data-side="bad"
-          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-description="She was once a loving sister and mentor to Maya, guiding her through the ways of magic. But the allure of dark power consumed her. Now, as a devoted sorceress of the Demon, Mavie is obsessed with forbidden magic—twisted by ambition, betrayal, and the thrill of ultimate control"
           data-image="images/characterlogo-03.png"
           data-weaponimg="images/weapon-03.png"
         >
@@ -268,7 +273,7 @@
           onclick="showPopup(this)"
           data-name="LUCAS (Angel/Lightweight)"
           data-side="bad"
-          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-description="He was once among the most powerful angels , a beacon of hope and strength along with his lover, Kadi. But pride gave way to jealousy, and ambition darkened his soul. Stripped of his wings and cast down, he now walks a path between light and shadow, burdened by regret and hunger for redemption"
           data-image="images/characterlogo-04.png"
           data-weaponimg="images/weapon-06.png"
         >
@@ -287,7 +292,7 @@
           onclick="showPopup(this)"
           data-name="MARTIN (Human/Protector)"
           data-side="bad"
-          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-description="The hero, once an ordinary warrior, was left for dead on the battlefield. But the dark magic breathed unholy life into him and give him new purpose. Now bound by shadow and pain, he serves darkness with unwavering loyalty. Neither fully alive nor dead, Martin is a relentless force of vengeance and fea"
           data-image="images/characterlogo-05.png"
           data-weaponimg="images/weapon-04.png"
         >
@@ -304,9 +309,9 @@
         <div
           class="character-box-bad hover-info-bad"
           onclick="showPopup(this)"
-          data-name="ANDY (Elf/Marksman)"
+          data-name="ANDY (Fairy/Marksman)"
           data-side="bad"
-          data-description="A gifted young mage from a revered magical bloodline, channels the power of light to protect the realm. Haunted by the loss of her fallen sister Mavie, who turned to darkness—Maya fights with grace and resolve, determined to uphold her family's legacy and restore balance to a fractured world."
+          data-description="He grew up alongside Huda, the gentle fairy prince, sharing dreams of wonder and light. Yet Andy’s restless spirit craved more than peaceful glades. Enticed by shadowed promises, he chose the opposite path, trading innocence for power. Now a cunning acolyte of darkness, her friendship with Hudb hangs by a thread."
           data-image="images/characterlogo-06.png"
           data-weaponimg="images/weapon-05.png"
         >
