--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -303,7 +303,7 @@ create all the character myself but i think it will take my many unecessary time
           onclick="showPopup(this)"
           data-name="LUCAS (Angel/Lightweight)"
           data-side="bad"
-          data-description="He was once among the most powerful angels , a beacon of hope and strength along with his lover, Kadi. But pride gave way to jealousy, and ambition darkened his soul. Stripped of his wings and cast down, he now walks a path between light and shadow, burdened by regret and hunger for redemption"
+          data-description="He was once among the most powerful angels , a beacon of hope and strength along with his lover, Kadi. But pride gave way to jealousy, and ambition darkened his soul. Stripped of his wings and cast down, he now walks a path between light and shadow, burdened by regret and hunger for redemption."
           data-image="images/characterlogo-04.png"
           data-weaponimg="images/weapon-06.png"
         >
